New style update

--- a/dc/dc.html
+++ b/dc/dc.html
@@ -41,7 +41,7 @@
         class="nav-list hidden flex-col absolute top-20 left-0 w-full bg-violet-950 text-white text-2xl p-6 pl-10 gap-4 z-40 sm:top-24 sm:pl-10 md:flex md:flex-row md:gap-6 md:items-center md:bg-transparent md:p-0 md:text-2xl md:static md:w-auto md:ml-auto"
       >
         <li><a href="../index.html">Home</a></li>
-        <li class="hover:text-red-600">
+        <li class="hover:text-red-600 transition ease-out duration-300">
           <a href="../marvel/marvel.html">Marvel</a>
         </li>
         <li class="hover:text-blue-600 text-blue-600"><a href="dc.html">DC</a></li>
@@ -57,7 +57,7 @@
           <img
             src="../assets/dc/dc.png"
             alt="dc logo"
-            class="max-h-30 sm:max-h-32 text-white"
+            class="h-24 sm:h-30 text-white"
           />
           <hr class="bg-white w-10 h-1 rounded-md my-4" />
           <p class="text-white text-md text-center mb-6 cursor-default sm:text-lg md:text-xl">
@@ -86,7 +86,7 @@
           />
           <p class="text-white text-3xl pt-4 cursor-default">Superman</p>
           <button
-            class="bg-violet-950 text-white text-lg my-4 py-2 px-4 rounded-md border-2 border-black hover:bg-violet-900 cursor-pointer"
+            class="bg-violet-950 text-white text-lg my-4 py-2 px-4 rounded-md border-2 border-black hover:bg-violet-800 cursor-pointer transition ease-out duration-500"
           >
             <a href="superman.html">View Details</a>
           </button>
@@ -103,7 +103,7 @@
           />
           <p class="text-white text-3xl pt-4 cursor-default">Batman</p>
           <button
-            class="bg-violet-950 text-white text-lg my-4 py-2 px-4 rounded-md border-2 border-black hover:bg-violet-900 cursor-pointer"
+            class="bg-violet-950 text-white text-lg my-4 py-2 px-4 rounded-md border-2 border-black hover:bg-violet-800 cursor-pointer transition ease-out duration-500"
           >
             <a href="batman.html">View Details</a>
           </button>
@@ -119,7 +119,7 @@
           />
           <p class="text-white text-3xl pt-4 cursor-default">Wonder Woman</p>
           <button
-            class="bg-violet-950 text-white text-lg my-4 py-2 px-4 rounded-md border-2 border-black hover:bg-violet-900 cursor-pointer"
+            class="bg-violet-950 text-white text-lg my-4 py-2 px-4 rounded-md border-2 border-black hover:bg-violet-800 cursor-pointer transition ease-out duration-500"
           >
             <a href="wonderwoman.html">View Details</a>
           </button>
@@ -135,7 +135,7 @@
           />
           <p class="text-white text-3xl pt-4 cursor-default">Green Lantern</p>
           <button
-            class="bg-violet-950 text-white text-lg my-4 py-2 px-4 rounded-md border-2 border-black hover:bg-violet-900 cursor-pointer"
+            class="bg-violet-950 text-white text-lg my-4 py-2 px-4 rounded-md border-2 border-black hover:bg-violet-800 cursor-pointer transition ease-out duration-500"
           >
             <a href="greenlantern.html">View Details</a>
           </button>
@@ -146,7 +146,7 @@
     <section>
       <div class="flex justify-center items-center -mt-10 mb-10">
         <button
-          class="bg-violet-950 text-white text-lg my-4 py-2 px-6 rounded-md border-2 border-black hover:bg-violet-900 cursor-pointer"
+          class="bg-violet-950 text-white text-lg my-4 py-2 px-6 rounded-md border-2 shadow-2xl border-black hover:bg-violet-800 cursor-pointer transition ease-out duration-500"
         >
           <a href="../index.html">Go Back</a>
         </button>
