--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@
         class="nav-list hidden flex-col absolute top-20 left-0 w-full bg-violet-950 text-white text-2xl p-6 pl-10 gap-4 z-40 sm:top-24 sm:pl-10 md:flex md:flex-row md:gap-6 md:items-center md:bg-transparent md:p-0 md:text-2xl md:static md:w-auto md:ml-auto"
       >
         <li><a href="index.html">Home</a></li>
-        <li class="hover:text-red-600">
+        <li class="hover:text-red-600 transition ease-out duration-300">
           <a href="marvel/marvel.html">Marvel</a>
         </li>
-        <li class="hover:text-blue-600"><a href="dc/dc.html">DC</a></li>
+        <li class="hover:text-blue-600 transition ease-out duration-300"><a href="dc/dc.html">DC</a></li>
         <li><a href="heroes.html">All Heroes</a></li>
       </ul>
     </navbar>
 
     <main
-      class="bg-black w-full min-h-full flex-col flex items-center justify-center gap-y-5"
+      class="bg-black w-full min-h-full flex-col flex items-center justify-center gap-y-6"
     >
       <h3 class="text-white text-3xl pt-20 cursor-default">Welcome to</h3>
       <span class="bg-white h-1 w-7 rounded-3xl"></span>
@@ -80,14 +80,14 @@
             ><img
               src="assets/marvel/marvel.png"
               alt="marvel logo"
-              class="h-28 hover:relative -top-4 text-white"
+              class="h-24 text-white transform ease-out duration-300 hover:scale-110"
           /></a>
           <span class="bg-white h-7 w-1 rounded-3xl"></span>
           <a href="dc/dc.html"
             ><img
               src="assets/dc/dc.png"
               alt="dc logo"
-              class="h-28 hover:relative -top-4 text-white"
+              class="h-24 text-white transform ease-out duration-300 hover:scale-110"
           /></a>
         </div>
       </div>
@@ -134,11 +134,11 @@
             <img
               src="assets/marvel/marvel.png"
               alt="marvel white logo"
-              class="text-white h-10"
+              class="text-white h-10 transform ease-out duration-300 hover:scale-110"
             />
           </a>
           <button
-            class="bg-violet-950 text-white text-lg my-4 py-2 px-4 rounded-md border-2 border-black hover:bg-violet-900 cursor-pointer"
+            class="bg-violet-950 text-white text-lg my-4 py-2 px-4 rounded-md border-2 border-black hover:bg-violet-800 cursor-pointer transition ease-out duration-500"
           >
             <a href="marvel/spiderman.html">View Details</a>
           </button>
@@ -154,10 +154,10 @@
           />
           <p class="text-white text-3xl pt-4 cursor-default">Batman</p>
           <a href="dc/dc.html">
-            <img src="assets/dc/dc.png" alt="dc logo" class="text-white h-10" />
+            <img src="assets/dc/dc.png" alt="dc logo" class="text-white h-10 transform ease-out duration-300 hover:scale-110" />
           </a>
           <button
-            class="bg-violet-950 text-white text-lg my-4 py-2 px-4 rounded-md border-2 border-black hover:bg-violet-900 cursor-pointer"
+            class="bg-violet-950 text-white text-lg my-4 py-2 px-4 rounded-md border-2 border-black hover:bg-violet-800 cursor-pointer transition ease-out duration-500"
           >
             <a href="dc/batman.html">View Details</a>
           </button>
@@ -173,10 +173,10 @@
           />
           <p class="text-white text-3xl pt-4 cursor-default">Superman</p>
           <a href="dc/dc.html">
-            <img src="assets/dc/dc.png" alt="dc logo" class="text-white h-10" />
+            <img src="assets/dc/dc.png" alt="dc logo" class="text-white h-10 transform ease-out duration-300 hover:scale-110" />
           </a>
           <button
-            class="bg-violet-950 text-white text-lg my-4 py-2 px-4 rounded-md border-2 border-black hover:bg-violet-900 cursor-pointer"
+            class="bg-violet-950 text-white text-lg my-4 py-2 px-4 rounded-md border-2 border-black hover:bg-violet-800 cursor-pointer transition ease-out duration-500"
           >
             <a href="dc/superman.html">View Details</a>
           </button>
