--- a/marvel/marvel.html
+++ b/marvel/marvel.html
@@ -44,7 +44,7 @@
         <li class="hover:text-red-600 text-red-600">
           <a href="marvel.html">Marvel</a>
         </li>
-        <li class="hover:text-blue-600"><a href="../dc/dc.html">DC</a></li>
+        <li class="hover:text-blue-600 transition ease-out duration-300"><a href="../dc/dc.html">DC</a></li>
         <li><a href="../heroes.html">All Heroes</a></li>
       </ul>
     </navbar>
@@ -57,7 +57,7 @@
           <img
             src="../assets/marvel/marvel.png"
             alt="marvel logo"
-            class="max-h-30 sm:max-h-32 text-white"
+            class="h-24 sm:h-30 text-white"
           />
           <hr class="bg-white w-10 h-1 rounded-md mb-4" />
           <p class="text-white text-md text-center mb-6 cursor-default sm:text-lg md:text-xl">
@@ -85,7 +85,7 @@
           />
           <p class="text-white text-3xl pt-4 cursor-default">Spider-Man</p>
           <button
-            class="bg-violet-950 text-white text-lg my-4 py-2 px-4 rounded-md border-black border-2 hover:bg-violet-900 cursor-pointer"
+            class="bg-violet-950 text-white text-lg my-4 py-2 px-4 rounded-md border-black border-2 hover:bg-violet-800 cursor-pointer transition ease-out duration-500"
           >
             <a href="spiderman.html">View Details</a>
           </button>
@@ -102,7 +102,7 @@
           />
           <p class="text-white text-3xl pt-4 cursor-default">Daredevil</p>
           <button
-            class="bg-violet-950 text-white text-lg my-4 py-2 px-4 rounded-md border-black border-2 hover:bg-violet-900 cursor-pointer"
+            class="bg-violet-950 text-white text-lg my-4 py-2 px-4 rounded-md border-black border-2 hover:bg-violet-800 cursor-pointer transition ease-out duration-500"
           >
             <a href="daredevil.html">View Details</a>
           </button>
@@ -119,7 +119,7 @@
           />
           <p class="text-white text-3xl pt-4 cursor-default">Wolverine</p>
           <button
-            class="bg-violet-950 text-white text-lg my-4 py-2 px-4 rounded-md border-black border-2 hover:bg-violet-900 cursor-pointer"
+            class="bg-violet-950 text-white text-lg my-4 py-2 px-4 rounded-md border-black border-2 hover:bg-violet-800 cursor-pointer transition ease-out duration-500"
           >
             <a href="wolverine.html">View Details</a>
           </button>
@@ -136,7 +136,7 @@
           />
           <p class="text-white text-3xl pt-4 cursor-default">Hulk</p>
           <button
-            class="bg-violet-950 text-white text-lg my-4 py-2 px-4 rounded-md border-black border-2 hover:bg-violet-900 cursor-pointer"
+            class="bg-violet-950 text-white text-lg my-4 py-2 px-4 rounded-md border-black border-2 hover:bg-violet-800 cursor-pointer transition ease-out duration-500"
           >
             <a href="hulk.html">View Details</a>
           </button>
@@ -147,7 +147,7 @@
     <section>
       <div class="flex justify-center items-center -mt-10 mb-10">
         <button
-          class="bg-violet-950 text-white text-lg my-4 py-2 px-6 rounded-md border-black border-2 hover:bg-violet-900 cursor-pointer"
+          class="bg-violet-950 text-white text-lg my-4 py-2 px-6 rounded-md shadow-2xl border-black border-2 hover:bg-violet-800 cursor-pointer transition ease-out duration-500"
         >
           <a href="../index.html">Go Back</a>
         </button>
