--- a/heroes.html
+++ b/heroes.html
@@ -43,10 +43,10 @@
         class="nav-list hidden flex-col absolute top-20 left-0 w-full bg-violet-950 text-white text-2xl p-6 pl-10 gap-4 z-40 sm:top-24 sm:pl-10 md:flex md:flex-row md:gap-6 md:items-center md:bg-transparent md:p-0 md:text-2xl md:static md:w-auto md:ml-auto"
       >
         <li><a href="index.html">Home</a></li>
-        <li class="hover:text-red-600">
+        <li class="hover:text-red-600 transition ease-out duration-300">
           <a href="marvel/marvel.html">Marvel</a>
         </li>
-        <li class="hover:text-blue-600"><a href="dc/dc.html">DC</a></li>
+        <li class="hover:text-blue-600 transition ease-out duration-300"><a href="dc/dc.html">DC</a></li>
         <li><a href="heroes.html">All Heroes</a></li>
       </ul>
     </navbar>
@@ -74,19 +74,19 @@
       <div class="flex gap-4 mb-5">
         <button
           data-filter="all"
-          class="filter-btn bg-black text-white px-4 py-2 rounded-lg cursor-pointer"
+          class="filter-btn bg-violet-950 text-white px-4 py-2 rounded-md cursor-pointer border-black border-2 hover:bg-violet-800 transition ease-out duration-300"
         >
           All
         </button>
         <button
           data-filter="marvel"
-          class="filter-btn bg-red-700 text-white px-4 py-2 rounded-lg cursor-pointer"
+          class="filter-btn bg-red-700 text-white px-4 py-2 rounded-md cursor-pointer border-black border-2 hover:bg-red-600 transition ease-out duration-300"
         >
           Marvel
         </button>
         <button
           data-filter="dc"
-          class="filter-btn bg-blue-700 text-white px-4 py-2 rounded-lg cursor-pointer"
+          class="filter-btn bg-blue-700 text-white px-4 py-2 rounded-md cursor-pointer border-black border-2 hover:bg-blue-600 transition ease-out duration-300"
         >
           DC
         </button>
@@ -107,10 +107,10 @@
           />
           <p class="text-white text-3xl pt-4 cursor-default">Batman</p>
           <a href="dc/dc.html">
-            <img src="assets/dc/dc.png" alt="dc logo" class="text-white h-10" />
+            <img src="assets/dc/dc.png" alt="dc logo" class="text-white h-10 transform ease-out duration-300 hover:scale-110" />
           </a>
           <button
-            class="bg-violet-950 text-white text-lg my-4 py-2 px-4 rounded-md border-2 border-black hover:bg-violet-900 cursor-pointer sm:p-2"
+            class="bg-violet-950 text-white text-lg my-4 py-2 px-4 rounded-md border-2 border-black hover:bg-violet-800 cursor-pointer transition ease-out duration-500 sm:p-2"
           >
             <a href="dc/batman.html">View Details</a>
           </button>
@@ -131,11 +131,11 @@
             <img
               src="assets/marvel/marvel.png"
               alt="marvel white logo"
-              class="text-white h-10"
+              class="text-white h-10 transform ease-out duration-300 hover:scale-110"
             />
           </a>
           <button
-            class="bg-violet-950 text-white text-lg my-4 py-2 px-4 rounded-md border-2 border-black hover:bg-violet-900 cursor-pointer sm:p-2"
+            class="bg-violet-950 text-white text-lg my-4 py-2 px-4 rounded-md border-2 border-black hover:bg-violet-800 cursor-pointer transition ease-out duration-500 sm:p-2"
           >
             <a href="marvel/daredevil.html">View Details</a>
           </button>
@@ -155,10 +155,10 @@
             Green Lantern
           </p>
           <a href="dc/dc.html">
-            <img src="assets/dc/dc.png" alt="dc logo" class="text-white h-10" />
+            <img src="assets/dc/dc.png" alt="dc logo" class="text-white h-10 transform ease-out duration-300 hover:scale-110" />
           </a>
           <button
-            class="bg-violet-950 text-white text-lg my-4 py-2 px-4 rounded-md border-2 border-black hover:bg-violet-900 cursor-pointer sm:p-2"
+            class="bg-violet-950 text-white text-lg my-4 py-2 px-4 rounded-md border-2 border-black hover:bg-violet-800 cursor-pointer transition ease-out duration-500 sm:p-2"
           >
             <a href="dc/greenlantern.html">View Details</a>
           </button>
@@ -179,11 +179,11 @@
             <img
               src="assets/marvel/marvel.png"
               alt="marvel white logo"
-              class="text-white h-10"
+              class="text-white h-10 transform ease-out duration-300 hover:scale-110"
             />
           </a>
           <button
-            class="bg-violet-950 text-white text-lg my-4 py-2 px-4 rounded-md border-2 border-black hover:bg-violet-900 cursor-pointer sm:p-2"
+            class="bg-violet-950 text-white text-lg my-4 py-2 px-4 rounded-md border-2 border-black hover:bg-violet-800 cursor-pointer transition ease-out duration-500 sm:p-2"
           >
             <a href="marvel/hulk.html">View Details</a>
           </button>
@@ -206,11 +206,11 @@
             <img
               src="assets/marvel/marvel.png"
               alt="marvel white logo"
-              class="text-white h-10"
+              class="text-white h-10 transform ease-out duration-300 hover:scale-110"
             />
           </a>
           <button
-            class="bg-violet-950 text-white text-lg my-4 py-2 px-4 rounded-md border-2 border-black hover:bg-violet-900 cursor-pointer sm:p-2"
+            class="bg-violet-950 text-white text-lg my-4 py-2 px-4 rounded-md border-2 border-black hover:bg-violet-800 cursor-pointer transition ease-out duration-500 sm:p-2"
           >
             <a href="marvel/spiderman.html">View Details</a>
           </button>
@@ -228,10 +228,10 @@
           />
           <p class="text-white text-3xl pt-4 cursor-default">Superman</p>
           <a href="dc/dc.html">
-            <img src="assets/dc/dc.png" alt="dc logo" class="text-white h-10" />
+            <img src="assets/dc/dc.png" alt="dc logo" class="text-white h-10 transform ease-out duration-300 hover:scale-110" />
           </a>
           <button
-            class="bg-violet-950 text-white text-lg my-4 py-2 px-4 rounded-md border-2 border-black hover:bg-violet-900 cursor-pointer sm:p-2"
+            class="bg-violet-950 text-white text-lg my-4 py-2 px-4 rounded-md border-2 border-black hover:bg-violet-800 cursor-pointer transition ease-out duration-500 sm:p-2"
           >
             <a href="dc/superman.html">View Details</a>
           </button>
@@ -252,11 +252,11 @@
             <img
               src="assets/marvel/marvel.png"
               alt="marvel white logo"
-              class="text-white h-10"
+              class="text-white h-10 transform ease-out duration-300 hover:scale-110"
             />
           </a>
           <button
-            class="bg-violet-950 text-white text-lg my-4 py-2 px-4 rounded-md border-2 border-black hover:bg-violet-900 cursor-pointer sm:p-2"
+            class="bg-violet-950 text-white text-lg my-4 py-2 px-4 rounded-md border-2 border-black hover:bg-violet-800 cursor-pointer transition ease-out duration-500 sm:p-2"
           >
             <a href="marvel/wolverine.html">View Details</a>
           </button>
@@ -276,10 +276,10 @@
             Wonder Woman
           </p>
           <a href="dc/dc.html">
-            <img src="assets/dc/dc.png" alt="dc logo" class="text-white h-10" />
+            <img src="assets/dc/dc.png" alt="dc logo" class="text-white h-10 transform ease-out duration-300 hover:scale-110" />
           </a>
           <button
-            class="bg-violet-950 text-white text-lg my-4 py-2 px-4 rounded-md border-2 border-black hover:bg-violet-900 cursor-pointer sm:p-2"
+            class="bg-violet-950 text-white text-lg my-4 py-2 px-4 rounded-md border-2 border-black hover:bg-violet-800 cursor-pointer transition ease-out duration-500 sm:p-2"
           >
             <a href="dc/wonderwoman.html">View Details</a>
           </button>
