--- a/dc/dc.html
+++ b/dc/dc.html
@@ -60,7 +60,7 @@
             class="h-24 sm:h-30 text-white"
           />
           <hr class="bg-white w-10 h-1 rounded-md my-4" />
-          <p class="text-white text-md text-center mb-6 cursor-default sm:text-lg md:text-xl">
+          <p class="text-white text-md text-center mb-6 cursor-default sm:text-lg md:text-lg lg:text-xl">
             The DC Universe, first introduced in 1938 with Superman,<br />
             is a legendary realm of iconic heroes, dark villains, and mythic
             battles.<br />
@@ -73,7 +73,7 @@
 
     <section class="w-full min-h-full">
       <div
-        class="min-h-50 mt-20 grid grid-cols-1 pb-20 sm:grid-cols-2 gap-8 md:grid-cols-4"
+        class="min-h-50 mt-20 grid grid-cols-1 pb-20 sm:grid-cols-2 gap-8 md:grid-cols-2 md:grid-rows-2"
       >
         <!-- Card 1 -->
         <div
