--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <h3 class="text-white text-3xl pt-20 cursor-default">Welcome to</h3>
       <span class="bg-white h-1 w-7 rounded-3xl"></span>
       <h2
-        class="text-white text-8xl flex justify-center items-center cursor-default"
+        class="text-white text-7xl flex justify-center items-center cursor-default"
       >
         Hero<span class="items-center flex justify-center"
           ><img
@@ -75,19 +75,19 @@
         <p class="text-white text-2xl text-center cursor-default">
           Choose Your Universe
         </p>
-        <div class="flex justify-between items-center gap-x-8 pt-5 pb-20">
+        <div class="flex justify-between items-center gap-x-8 pt-5 pb-20 mx-auto my-0 w-[90%] md:-w-[90%] md:-mx-auto md:-my-0">
           <a href="marvel/marvel.html"
             ><img
               src="assets/marvel/marvel.png"
               alt="marvel logo"
-              class="h-24 text-white transform ease-out duration-300 hover:scale-110"
+              class="h-20 text-white transform ease-out duration-300 hover:scale-110 md:h-24"
           /></a>
           <span class="bg-white h-7 w-1 rounded-3xl"></span>
           <a href="dc/dc.html"
             ><img
               src="assets/dc/dc.png"
               alt="dc logo"
-              class="h-24 text-white transform ease-out duration-300 hover:scale-110"
+              class="h-20 text-white transform ease-out duration-300 hover:scale-110 md:h-24"
           /></a>
         </div>
       </div>
