--- a/marvel/marvel.html
+++ b/marvel/marvel.html
@@ -60,7 +60,7 @@
             class="h-24 sm:h-30 text-white"
           />
           <hr class="bg-white w-10 h-1 rounded-md mb-4" />
-          <p class="text-white text-md text-center mb-6 cursor-default sm:text-lg md:text-xl">
+          <p class="text-white text-md text-center mb-6 cursor-default sm:text-lg md:text-lg lg:text-xl">
             The Marvel Universe, created in 1961 by Stan Lee and Jack Kirby,
             <br />is a vast world of heroes, villains, and cosmic forces. <br />
             It spans Earth and beyond, exploring epic tales of heroism,
@@ -72,7 +72,7 @@
 
     <section>
       <div
-        class="min-h-50 mt-20 grid grid-cols-1 pb-20 sm:grid-cols-2 gap-8 md:grid-cols-4"
+        class="min-h-50 mt-20 grid grid-cols-1 pb-20 sm:grid-cols-2 gap-8 md:grid-cols-2 md:grid-rows-2"
       >
         <!-- Card 1 -->
         <div
