--- a/marvel/hulk.html
+++ b/marvel/hulk.html
@@ -76,18 +76,18 @@
               </h4>
             </div>
 
-            <div class="bg-black rounded-2xl mt-5 mb-5 p-4">
+            <div class="bg-black rounded-2xl mt-5 mb-5 p-4 mx-auto my-0 w-[80%]">
               <h3 class="text-2xl text-white text-center cursor-default underline">Origin</h3>
               <p class="text-white text-lg mb-4 text-center cursor-default">
                 Bruce Banner was exposed to gamma radiation<br />
                 during a lab accident while saving a teenager.<br />
-                The incident transformed him into the Hulk —<br />
+                The incident transformed him into the Hulk<br />
                 a powerful green giant driven by rage whenever Bruce loses
                 control.
               </p>
             </div>
 
-            <div class="text-center bg-violet-950 rounded-2xl p-4">
+            <div class="text-center bg-violet-950 rounded-2xl p-4 mx-auto my-0 w-[80%]">
               <h3 class="text-white text-2xl cursor-default underline">Powers & Abilities</h3>
               <ul class="list-none">
                 <li class="text-white text-xl cursor-default">💥 Unlimited Super Strength</li>
