--- a/marvel/spiderman.html
+++ b/marvel/spiderman.html
@@ -51,7 +51,7 @@
 
     <main class="w-full min-h-full">
       <div class="flex flex-row bg-red-800 justify-center py-20">
-        <div class="block sm:flex">
+        <div class="block mx-auto my-0 sm:flex">
           <div class="flex justify-center items-center">
             <img
               class="w-[220px] h-[320px] sm:w-[280px] sm:h-[400px] border-2 border-black rounded-4xl text-white"
@@ -71,7 +71,7 @@
               </h4>
             </div>
 
-            <div class="bg-black rounded-2xl mt-5 mb-5 p-4">
+            <div class="bg-black rounded-2xl mt-5 mb-5 p-4 mx-auto my-0 w-[80%]">
               <h3 class="text-2xl text-white text-center cursor-default underline">Origin</h3>
               <p class="text-white text-lg mb-4 text-center cursor-default">
                 Peter Parker was an ordinary high school student<br />
@@ -82,7 +82,7 @@
               </p>
             </div>
 
-            <div class="text-center bg-violet-950 rounded-2xl p-4">
+            <div class="text-center bg-violet-950 rounded-2xl p-4 mx-auto my-0 w-[80%]">
               <h3 class="text-white text-2xl cursor-default underline">Powers & Abilities</h3>
               <ul class="list-none">
                 <li class="text-white text-xl cursor-default">🕷️ Wall-Crawling</li>
