--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <h3 class="text-white text-3xl pt-20 cursor-default">Welcome to</h3>
       <span class="bg-white h-1 w-7 rounded-3xl"></span>
       <h2
-        class="text-white text-7xl flex justify-center items-center cursor-default"
+        class="text-white text-7xl flex justify-center items-center cursor-default md:text-8xl"
       >
         Hero<span class="items-center flex justify-center"
           ><img
@@ -75,7 +75,7 @@
         <p class="text-white text-2xl text-center cursor-default">
           Choose Your Universe
         </p>
-        <div class="flex justify-between items-center gap-x-8 pt-5 pb-20 mx-auto my-0 w-[90%] md:-w-[90%] md:-mx-auto md:-my-0">
+        <div class="flex justify-between items-center gap-x-8 pt-5 pb-20 mx-auto my-0">
           <a href="marvel/marvel.html"
             ><img
               src="assets/marvel/marvel.png"
