--- a/dc/dc.html
+++ b/dc/dc.html
@@ -73,7 +73,7 @@
 
     <section class="w-full min-h-full">
       <div
-        class="min-h-50 mt-20 grid grid-cols-1 pb-20 sm:grid-cols-2 gap-8 md:grid-cols-2 md:grid-rows-2"
+        class="min-h-50 mt-20 grid grid-cols-1 pb-20 sm:grid-cols-2 gap-8 md:grid-cols-2 md:grid-rows-2 lg:grid-cols-4 lg:grid-rows-1"
       >
         <!-- Card 1 -->
         <div
